--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+version: '3'
 services:
   app:
     build:
@@ -6,7 +7,8 @@ services:
     container_name: redwood-api
     volumes:
       - ./:/var/www/html
-      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./docker/nginx/api.conf:/etc/nginx/conf.d/api.conf
+      - ./docker/nginx/frontend.conf:/etc/nginx/conf.d/frontend.conf
     ports:
       - "80:80"
       - "443:443"
@@ -39,8 +41,8 @@ services:
     volumes:
       - './frontend:/app'
     ports:
-      - '3000:5173'
-      - '9000:8000'
+      - '80:5173'
+      - '8080:8080'
     networks:
       - laravel
 networks:
