--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -5,12 +5,14 @@
     "interface-extensions.d.ts",
     "components.d.ts",
     "auto-imports.d.ts",
+    "formkit.theme.ts",
     "src/**/*",
     "src/**/*.vue"
   ],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
     "composite": true,
+    "noEmit": false,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "baseUrl": ".",
     "paths": {
