--- a/frontend/package.json
+++ b/frontend/package.json
@@ -66,6 +66,7 @@
     "postcss-import": "16.1.0",
     "postcss-nesting": "13.0.0",
     "prettier": "3.3.2",
+    "sass-embedded": "^1.79.4",
     "tailwindcss": "3.4.4",
     "typescript": "5.6.2",
     "unplugin-auto-import": "0.18.0",
