--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@kitbag/router": "^0.9.0",
     "@unhead/vue": "1.11.2",
     "axios": "^1.7.7",
+    "camelcase-keys": "^9.1.3",
     "pinia": "2.2.0",
     "vue": "3.5.3"
   },
