--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,12 +18,12 @@
   },
   "dependencies": {
     "@formkit/vue": "^1.6.7",
-    "@kitbag/router": "^0.9.0",
     "@unhead/vue": "1.11.2",
     "axios": "^1.7.7",
     "camelcase-keys": "^9.1.3",
     "pinia": "2.2.0",
-    "vue": "3.5.3"
+    "vue": "3.5.3",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@egoist/tailwindcss-icons": "1.8.1",
