--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "@formkit/icons": "^1.6.7",
+    "@formkit/pro": "^0.127.5",
     "@formkit/vue": "^1.6.7",
     "@primevue/themes": "^4.1.0",
     "@unhead/vue": "1.11.2",
@@ -25,6 +27,7 @@
     "pinia": "2.2.0",
     "primeicons": "^7.0.0",
     "primevue": "^4.1.0",
+    "uuid": "^10.0.0",
     "vue": "3.5.3",
     "vue-router": "^4.4.5"
   },
