--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@unhead/vue": "1.11.2",
     "axios": "^1.7.7",
     "camelcase-keys": "^9.1.3",
+    "date-fns": "^4.1.0",
     "pinia": "2.2.0",
     "primeicons": "^7.0.0",
     "primevue": "^4.1.0",
