ignoring phpstan and php-cs-fixer files

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,23 @@
+.env
+.env.backup
+.env.production
+.phpactor.json
+.php-cs-fixer.cache
+.phpunit.result.cache
+/.fleet
+/.idea
 /.phpunit.cache
+/.vscode
+/.zed
 /node_modules
 /public/build
 /public/hot
 /public/storage
 /storage/*.key
 /vendor
-.env
-.env.backup
-.env.production
-.phpactor.json
-.phpunit.result.cache
 Homestead.json
 Homestead.yaml
 auth.json
 npm-debug.log
+phpstan.neon
 yarn-error.log
-/.fleet
-/.idea
-/.vscode
-/.zed
