--- a/frontend/package.json
+++ b/frontend/package.json
@@ -60,11 +60,13 @@
     "cssnano": "7.0.3",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-import": "2.30.0",
+    "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-n": "17.10.1",
     "eslint-plugin-playwright": "1.6.2",
     "eslint-plugin-promise": "7.1.0",
     "eslint-plugin-security": "3.0.1",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "eslint-plugin-vue": "9.28.0",
     "js-cookie": "^3.0.5",
     "jsdom": "25.0.0",
