--- a/.env.testing
+++ b/.env.testing
@@ -26,7 +26,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mariadb
-DB_HOST=db
+DB_HOST=redwood_db
 DB_PORT=3306
 DB_DATABASE=redwood_testing
 DB_USERNAME=laravel
