--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,8 +49,8 @@
     "@types/node": "20.16.1",
     "@typescript-eslint/eslint-plugin": "8.6.0",
     "@typescript-eslint/parser": "8.6.0",
-    "@vitejs/plugin-vue": "5.1.0",
-    "@vitest/coverage-v8": "2.1.1",
+    "@vitejs/plugin-vue": "^5.2.4",
+    "@vitest/coverage-v8": "^3.2.4",
     "@vue/eslint-config-prettier": "9.0.0",
     "@vue/eslint-config-typescript": "13.0.0",
     "@vue/test-utils": "2.4.6",
@@ -81,9 +81,9 @@
     "typescript": "5.6.2",
     "unplugin-auto-import": "0.18.0",
     "unplugin-vue-components": "0.27.0",
-    "vite": "5.4.0",
-    "vite-plugin-vue-devtools": "7.4.4",
-    "vitest": "2.1.1",
+    "vite": "^7.0.6",
+    "vite-plugin-vue-devtools": "^7.7.7",
+    "vitest": "^3.2.4",
     "vue-tsc": "2.1.2",
     "wait-on": "8.0.0"
   },
